@@ -1,6 +1,6 @@
 ## Makefile.am for the TeX Live subdirectory texk/dvipsk/
 ##
-## Copyright (C) 2009-2011 Peter Breitenlohner <tex-live@tug.org>
+## Copyright (C) 2009-2012 Peter Breitenlohner <tex-live@tug.org>
 ## You may freely use, modify and/or distribute this file.
 ##
 ACLOCAL_AMFLAGS = -I ../../m4
@@ -98,7 +98,7 @@ SUFFIXES = .pro .lpro
 .lpro.pro:
 	squeeze/squeeze <$< >t-$@ && mv t-$@ $@
 
-# When cross-compiling, EXEEXT for the build and hosts system may differ.
+# When cross-compiling, EXEEXT for the build and host systems may differ.
 # Thus we depend on the auxiliary file squeeze/stamp-squeeze.
 $(prologues): squeeze/stamp-squeeze
 
